# flappy_bot_cli

./: README.md  pyproject.toml  requirements.txt
flappy_bird/: __main__.py  train_synthetic_correct.py
flappy_bird/src/ai/: __init__.py  ai_game_runner.py  game_sensor.py  neural_net.py
flappy_bird/src/common/: Physics.py  Start.py
flappy_bird/src/core/: flappy_core.py
flappy_bird/src/utils/: Start.py  detecters.py  spwaners.py
models/: learned_synthetic_corrected.npy
