[tool.poetry]
name = "flappy_bird_cli"
version = "0.1.0"
description = "This is a cli flappy bird game"
authors = ["mohdzsinanm <mohamedysf@bicpu.edu.in>"]

[tool.poetry.dependencies]
python = "^3.10"
keyboard = "^0.13.5"
emoji = "^2.14.1"
pynput = "^1.7.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
